--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Vue app deployment
+name: Deploy Vue App to AWS
 
 on:
   push:
@@ -20,21 +20,9 @@ jobs:
         with:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
-      - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
         with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: Build the dist
-        run: |
-          npm ci
-          npm run build --if-present
-
-      - name: Commit build to gp-vue
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git --work-tree dist add --all
-          git commit -m "Vue deployment run by github-actions"
-          git push origin HEAD:gp-vue --force
-        shell: bash
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-region: us-west-2
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
